--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "organization": false
   },
   "devDependencies": {
+    "constructs": "3.0.4",
+    "@aws-cdk/core": "1.56.0",
+    "@aws-cdk/aws-lambda": "1.56.0",
+    "@aws-cdk/aws-iam": "1.56.0",
+    "@aws-cdk/aws-sns": "1.56.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.56.0",
     "@aws-cdk/assert": "1.56.0",
     "@types/jest": "^26.0.7",
     "@types/node": "^10.17.0",
@@ -52,7 +58,14 @@
     "jsii-release": "^0.1.6",
     "jsii-docgen": "^1.3.2"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "constructs": "3.0.4",
+    "@aws-cdk/core": "1.56.0",
+    "@aws-cdk/aws-lambda": "1.56.0",
+    "@aws-cdk/aws-iam": "1.56.0",
+    "@aws-cdk/aws-sns": "1.56.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.56.0"
+  },
   "dependencies": {
     "constructs": "3.0.4",
     "@aws-cdk/core": "1.56.0",
