--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ jspm_packages/
 tsconfig.json
 cdk.context.json
 cdk.out
+.parcel-cache
 package.json
 !# synthesized by projen, (do not modify by hand)
 !/package.json
