--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "constructs": "3.0.4",
     "@aws-cdk/core": "1.57.0",
     "@aws-cdk/aws-lambda": "1.57.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.57.0",
     "@aws-cdk/aws-iam": "1.57.0",
     "@aws-cdk/aws-sns": "1.57.0",
     "@aws-cdk/aws-sns-subscriptions": "1.57.0",
@@ -62,6 +63,7 @@
     "constructs": "3.0.4",
     "@aws-cdk/core": "1.57.0",
     "@aws-cdk/aws-lambda": "1.57.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.57.0",
     "@aws-cdk/aws-iam": "1.57.0",
     "@aws-cdk/aws-sns": "1.57.0",
     "@aws-cdk/aws-sns-subscriptions": "1.57.0"
@@ -70,6 +72,7 @@
     "constructs": "3.0.4",
     "@aws-cdk/core": "1.57.0",
     "@aws-cdk/aws-lambda": "1.57.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.57.0",
     "@aws-cdk/aws-iam": "1.57.0",
     "@aws-cdk/aws-sns": "1.57.0",
     "@aws-cdk/aws-sns-subscriptions": "1.57.0"
