--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "bump": "yarn --silent no-changes || standard-version",
     "release": "yarn --silent no-changes || (yarn bump && git push --follow-tags origin master)",
     "projen:upgrade": "chmod +w package.json && yarn upgrade -L projen && chmod -w package.json && yarn projen",
-    "compile": "jsii --silence-warnings=reserved-word && jsii-docgen",
-    "watch": "jsii -w --silence-warnings=reserved-word",
+    "compile": "jsii --silence-warnings=reserved-word --no-fix-peer-dependencies && jsii-docgen",
+    "watch": "jsii -w --silence-warnings=reserved-word --no-fix-peer-dependencies",
     "package": "jsii-pacmak",
     "build": "yarn test && yarn compile && yarn run package",
     "eslint": "eslint . --ext .ts",
@@ -31,53 +31,53 @@
     "organization": false
   },
   "devDependencies": {
-    "constructs": "3.0.4",
-    "@aws-cdk/core": "1.60.0",
+    "@aws-cdk/assert": "1.60.0",
+    "@aws-cdk/aws-iam": "1.60.0",
     "@aws-cdk/aws-lambda": "1.60.0",
     "@aws-cdk/aws-lambda-nodejs": "1.60.0",
-    "@aws-cdk/aws-iam": "1.60.0",
     "@aws-cdk/aws-sns": "1.60.0",
     "@aws-cdk/aws-sns-subscriptions": "1.60.0",
-    "@aws-cdk/assert": "1.60.0",
+    "@aws-cdk/core": "1.60.0",
     "@types/jest": "^26.0.7",
     "@types/node": "^10.17.0",
-    "parcel": "2.0.0-beta.1",
-    "projen": "^0.3.39",
-    "standard-version": "^8.0.1",
-    "typescript": "^3.9.5",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.19.2",
+    "constructs": "3.0.4",
     "eslint": "^6.8.0",
     "eslint-import-resolver-node": "^0.3.3",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.2",
-    "json-schema": "^0.2.5",
-    "jest": "^26.0.1",
-    "ts-jest": "^26.1.0",
+    "jest": "^26.4.2",
     "jsii": "^1.10.0",
     "jsii-diff": "^1.10.0",
+    "jsii-docgen": "^1.3.2",
     "jsii-pacmak": "^1.10.0",
     "jsii-release": "^0.1.6",
-    "jsii-docgen": "^1.3.2"
+    "json-schema": "^0.2.5",
+    "parcel": "2.0.0-beta.1",
+    "projen": "^0.3.47",
+    "standard-version": "^9.0.0",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "constructs": "3.0.4",
-    "@aws-cdk/core": "1.60.0",
+    "@aws-cdk/aws-iam": "1.60.0",
     "@aws-cdk/aws-lambda": "1.60.0",
     "@aws-cdk/aws-lambda-nodejs": "1.60.0",
-    "@aws-cdk/aws-iam": "1.60.0",
-    "@aws-cdk/aws-sns": "1.60.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.60.0"
-  },
-  "dependencies": {
-    "constructs": "3.0.4",
-    "@aws-cdk/core": "1.60.0",
-    "@aws-cdk/aws-lambda": "1.60.0",
-    "@aws-cdk/aws-lambda-nodejs": "1.60.0",
-    "@aws-cdk/aws-iam": "1.60.0",
     "@aws-cdk/aws-sns": "1.60.0",
     "@aws-cdk/aws-sns-subscriptions": "1.60.0",
-    "aws-sdk": "^2.737.0"
+    "@aws-cdk/core": "1.60.0",
+    "constructs": "3.0.4"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-iam": "1.60.0",
+    "@aws-cdk/aws-lambda": "1.60.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.60.0",
+    "@aws-cdk/aws-sns": "1.60.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.60.0",
+    "@aws-cdk/core": "1.60.0",
+    "aws-sdk": "^2.737.0",
+    "constructs": "3.0.4"
   },
   "bundledDependencies": [
     "aws-sdk"
