--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.63.0",
-    "@aws-cdk/aws-iam": "1.63.0",
-    "@aws-cdk/aws-lambda": "1.63.0",
-    "@aws-cdk/aws-lambda-nodejs": "1.63.0",
-    "@aws-cdk/aws-sns": "1.63.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.63.0",
-    "@aws-cdk/core": "1.63.0",
+    "@aws-cdk/assert": "^1.64.0",
+    "@aws-cdk/aws-iam": null,
+    "@aws-cdk/aws-lambda": null,
+    "@aws-cdk/aws-lambda-nodejs": null,
+    "@aws-cdk/aws-sns": null,
+    "@aws-cdk/aws-sns-subscriptions": null,
+    "@aws-cdk/core": null,
     "@types/jest": "^26.0.7",
     "@types/node": "^10.17.0",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
@@ -62,21 +62,21 @@
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "1.63.0",
-    "@aws-cdk/aws-lambda": "1.63.0",
-    "@aws-cdk/aws-lambda-nodejs": "1.63.0",
-    "@aws-cdk/aws-sns": "1.63.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.63.0",
-    "@aws-cdk/core": "1.63.0",
+    "@aws-cdk/aws-iam": "^1.64.0",
+    "@aws-cdk/aws-lambda": "^1.64.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.64.0",
+    "@aws-cdk/aws-sns": "^1.64.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.64.0",
+    "@aws-cdk/core": "^1.64.0",
     "constructs": "3.0.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "1.63.0",
-    "@aws-cdk/aws-lambda": "1.63.0",
-    "@aws-cdk/aws-lambda-nodejs": "1.63.0",
-    "@aws-cdk/aws-sns": "1.63.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.63.0",
-    "@aws-cdk/core": "1.63.0",
+    "@aws-cdk/aws-iam": "^1.64.0",
+    "@aws-cdk/aws-lambda": "^1.64.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.64.0",
+    "@aws-cdk/aws-sns": "^1.64.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.64.0",
+    "@aws-cdk/core": "^1.64.0",
     "aws-sdk": "^2.751.0",
     "constructs": "3.0.4"
   },
