Reduce maximum amount from 10 to 5 to stay in Teams Webhook limits

--- a/package.json
+++ b/package.json
@@ -176,5 +176,18 @@
       "outDir": "lib",
       "rootDir": "src"
     }
+  },
+  "targets": {
+    "cdk-lambda": {
+      "context": "node",
+      "includeNodeModules": {
+        "aws-sdk": false
+      },
+      "sourceMap": false,
+      "minify": true,
+      "engines": {
+        "node": ">= 12"
+      }
+    }
   }
 }
