--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "no-changes": "(git log --oneline -1 | grep -q \"chore(release):\") && echo \"No changes to release.\"",
     "bump": "yarn run --silent no-changes || standard-version",
     "release": "yarn run --silent no-changes || (yarn run bump && git push --follow-tags origin master)",
+    "test": "rm -fr lib/ && jest --passWithNoTests --updateSnapshot && yarn run eslint",
+    "test:watch": "jest --watch",
+    "test:update": "jest --updateSnapshot",
     "projen:upgrade": "yarn upgrade -L projen && CI=\"\" yarn projen",
     "compile": "jsii --silence-warnings=reserved-word --no-fix-peer-dependencies && jsii-docgen",
     "watch": "jsii -w --silence-warnings=reserved-word --no-fix-peer-dependencies",
     "build": "yarn run test && yarn run compile && yarn run package",
     "package": "jsii-pacmak",
-    "test": "rm -fr lib/ && jest --passWithNoTests --updateSnapshot && yarn run eslint",
-    "test:watch": "jest --watch",
-    "test:update": "jest --updateSnapshot",
-    "eslint": "eslint --ext .ts --fix src test",
+    "eslint": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern src test",
     "compat": "npx jsii-diff npm:$(node -p \"require('./package.json').name\") -k --ignore-file .compatignore || (echo \"\nUNEXPECTED BREAKING CHANGES: add keys such as 'removed:constructs.Node.of' to .compatignore to skip.\n\" && exit 1)",
     "docgen": "jsii-docgen"
   },
@@ -31,7 +31,7 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.68.0",
+    "@aws-cdk/assert": "^1.74.0",
     "@types/jest": "^26.0.7",
     "@types/node": "^10.17.0",
     "@types/node-fetch": "^2.5.7",
@@ -42,6 +42,7 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.2",
     "jest": "^26.4.2",
+    "jest-junit": "^12",
     "jsii": "^1.11.0",
     "jsii-diff": "^1.11.0",
     "jsii-docgen": "^1.3.2",
@@ -49,27 +50,27 @@
     "jsii-release": "^0.1.6",
     "json-schema": "^0.2.5",
     "parcel": "2.0.0-beta.1",
-    "projen": "^0.3.114",
+    "projen": "^0.3.173",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "^1.68.0",
-    "@aws-cdk/aws-lambda": "^1.68.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.68.0",
-    "@aws-cdk/aws-sns": "^1.68.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.68.0",
-    "@aws-cdk/core": "^1.68.0",
-    "constructs": "^3.0.4"
+    "@aws-cdk/aws-iam": "^1.74.0",
+    "@aws-cdk/aws-lambda": "^1.74.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.74.0",
+    "@aws-cdk/aws-sns": "^1.74.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.74.0",
+    "@aws-cdk/core": "^1.74.0",
+    "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "^1.68.0",
-    "@aws-cdk/aws-lambda": "^1.68.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.68.0",
-    "@aws-cdk/aws-sns": "^1.68.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.68.0",
-    "@aws-cdk/core": "^1.68.0",
+    "@aws-cdk/aws-iam": "^1.74.0",
+    "@aws-cdk/aws-lambda": "^1.74.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.74.0",
+    "@aws-cdk/aws-sns": "^1.74.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.74.0",
+    "@aws-cdk/core": "^1.74.0",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.751.0",
     "node-fetch": "^2.6.1"
@@ -84,90 +85,111 @@
     "ecr",
     "imagescan"
   ],
-  "engines": {
-    "node": ">= 10.17.0"
-  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "start": {
     "start": {
+      "command": "yarn run start",
       "desc": "Shows this menu"
     },
     "projen": {
       "desc": "Synthesize project configuration from .projenrc.js",
+      "command": "yarn run projen",
       "category": 3
     },
     "bump": {
       "desc": "Commits a bump to the package version based on conventional commits",
+      "command": "yarn run bump",
       "category": 2
     },
     "release": {
       "desc": "Bumps version & push to master",
-      "category": 2
-    },
-    "projen:upgrade": {
-      "desc": "upgrades projen to the latest version",
-      "category": 3
-    },
-    "compile": {
-      "desc": "Only compile",
-      "category": 0
-    },
-    "watch": {
-      "desc": "Watch & compile in the background",
-      "category": 0
-    },
-    "build": {
-      "desc": "Full release build (test+compile)",
-      "category": 0
-    },
-    "package": {
-      "desc": "Create an npm tarball",
+      "command": "yarn run release",
       "category": 2
     },
     "test": {
       "desc": "Run tests",
+      "command": "yarn run test",
       "category": 1
     },
     "test:watch": {
       "desc": "Run jest in watch mode",
+      "command": "yarn run test:watch",
       "category": 1
+    },
+    "projen:upgrade": {
+      "desc": "upgrades projen to the latest version",
+      "command": "yarn run projen:upgrade",
+      "category": 3
+    },
+    "compile": {
+      "desc": "Only compile",
+      "command": "yarn run compile",
+      "category": 0
+    },
+    "watch": {
+      "desc": "Watch & compile in the background",
+      "command": "yarn run watch",
+      "category": 0
+    },
+    "build": {
+      "desc": "Full release build (test+compile)",
+      "command": "yarn run build",
+      "category": 0
+    },
+    "package": {
+      "desc": "Create an npm tarball",
+      "command": "yarn run package",
+      "category": 2
     },
     "eslint": {
       "desc": "Runs eslint against the codebase",
+      "command": "yarn run eslint",
       "category": 1
     },
     "compat": {
       "desc": "Perform API compatibility check against latest version",
+      "command": "yarn run compat",
       "category": 2
     },
     "docgen": {
       "desc": "Generate API.md from .jsii manifest",
+      "command": "yarn run docgen",
       "category": 2
     }
   },
   "version": "0.1.38",
-  "types": "lib/index.d.ts",
   "jest": {
     "clearMocks": true,
     "collectCoverage": true,
+    "coverageDirectory": "coverage",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ],
     "testPathIgnorePatterns": [
       "/node_modules/"
     ],
-    "preset": "ts-jest",
     "testMatch": [
       "**/__tests__/**/*.ts?(x)",
       "**/?(*.)+(spec|test).ts?(x)"
     ],
+    "reporters": [
+      "default",
+      [
+        "jest-junit",
+        {
+          "outputDirectory": "test-reports"
+        }
+      ]
+    ],
+    "preset": "ts-jest",
     "globals": {
       "ts-jest": {
-        "tsConfig": "tsconfig.jest.json"
+        "tsconfig": "tsconfig.jest.json"
       }
     }
   },
+  "types": "lib/index.d.ts",
   "stability": "stable",
   "jsii": {
     "outdir": "dist",
