--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.74.0",
+    "@aws-cdk/assert": "^1.75.0",
     "@types/jest": "^26.0.7",
     "@types/node": "^10.17.0",
     "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "esbuild": "0.8.14",
     "eslint": "^6.8.0",
     "eslint-import-resolver-node": "^0.3.3",
     "eslint-import-resolver-typescript": "^2.0.0",
@@ -49,28 +50,27 @@
     "jsii-pacmak": "^1.11.0",
     "jsii-release": "^0.1.6",
     "json-schema": "^0.2.5",
-    "parcel": "2.0.0-beta.1",
-    "projen": "^0.3.173",
+    "projen": "^0.5.1",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "^1.74.0",
-    "@aws-cdk/aws-lambda": "^1.74.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.74.0",
-    "@aws-cdk/aws-sns": "^1.74.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.74.0",
-    "@aws-cdk/core": "^1.74.0",
+    "@aws-cdk/aws-iam": "^1.75.0",
+    "@aws-cdk/aws-lambda": "^1.75.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.75.0",
+    "@aws-cdk/aws-sns": "^1.75.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.75.0",
+    "@aws-cdk/core": "^1.75.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "^1.74.0",
-    "@aws-cdk/aws-lambda": "^1.74.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.74.0",
-    "@aws-cdk/aws-sns": "^1.74.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.74.0",
-    "@aws-cdk/core": "^1.74.0",
+    "@aws-cdk/aws-iam": "^1.75.0",
+    "@aws-cdk/aws-lambda": "^1.75.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.75.0",
+    "@aws-cdk/aws-sns": "^1.75.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.75.0",
+    "@aws-cdk/core": "^1.75.0",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.751.0",
     "node-fetch": "^2.6.1"
