chore(deps): bumps projen to 0.12.2

--- a/.gitignore
+++ b/.gitignore
@@ -49,9 +49,10 @@ cdk.out
 .parcel-cache
 package.json
 !/.projen/tasks.json
+!/.projen/deps.json
 !/package.json
-!/.npmignore
 !/LICENSE
+!/.npmignore
 !/.projenrc.js
 !version.json
 !/.versionrc.json
