--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "type": "git",
     "url": "https://github.com/markusl/cdk-ecr-image-scan-handler.git"
   },
-  "bin": {},
   "scripts": {
     "projen": "npx projen",
     "start": "npx projen start",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
+    "test:compile": "npx projen test:compile",
     "test": "npx projen test",
     "build": "npx projen build",
     "bump": "npx projen bump",
@@ -31,8 +31,8 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.80.0",
-    "@types/jest": "^26.0.7",
-    "@types/node": "^10.17.0",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.10",
     "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
@@ -49,7 +49,7 @@
     "jsii-pacmak": "^1.11.0",
     "jsii-release": "^0.1.6",
     "json-schema": "^0.2.5",
-    "projen": "^0.9.1",
+    "projen": "^0.12.2",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
@@ -71,7 +71,7 @@
     "@aws-cdk/aws-sns-subscriptions": "^1.80.0",
     "@aws-cdk/core": "^1.80.0",
     "aws-lambda": "^1.0.6",
-    "aws-sdk": "^2.751.0",
+    "aws-sdk": "^2.817.0",
     "node-fetch": "^2.6.1"
   },
   "bundledDependencies": [
