--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.80.0",
+    "@types/aws-lambda": "^8.10.68",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
     "@types/node-fetch": "^2.5.7",
@@ -49,7 +50,7 @@
     "jsii-pacmak": "^1.11.0",
     "jsii-release": "^0.1.6",
     "json-schema": "^0.2.5",
-    "projen": "^0.12.2",
+    "projen": "^0.12.8",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
@@ -71,7 +72,7 @@
     "@aws-cdk/aws-sns-subscriptions": "^1.80.0",
     "@aws-cdk/core": "^1.80.0",
     "aws-lambda": "^1.0.6",
-    "aws-sdk": "^2.817.0",
+    "aws-sdk": "^2.819.0",
     "node-fetch": "^2.6.1"
   },
   "bundledDependencies": [
