--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "projen": "^0.14.9",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.1.0",
-    "typescript": "^3.9.5"
+    "typescript": "4.1.3"
   },
   "peerDependencies": {
     "@aws-cdk/aws-iam": "^1.85.0",
