--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 .eslintcache
 .jsii
 .nyc_output
-.parcel-cache
 .yarn-integrity
 /coverage
 /dist
@@ -21,6 +20,7 @@ build/Release
 cdk.context.json
 cdk.out
 coverage
+doc
 jspm_packages/
 junit.xml
 lerna-debug.log*
@@ -28,7 +28,6 @@ lib-cov
 logs
 node_modules/
 npm-debug.log*
-package.json
 pids
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 tsconfig.json
@@ -51,5 +50,6 @@ yarn-error.log*
 !/package.json
 !/src
 !/test
+!/tsconfig.eslint.json
 !/tsconfig.jest.json
 !version.json
