--- a/package.json
+++ b/package.json
@@ -30,56 +30,53 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.85.0",
+    "@aws-cdk/assert": "^1.91.0",
     "@types/aws-lambda": "^8.10.68",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
     "@types/node-fetch": "^2.5.7",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "esbuild": "0.8.31",
-    "eslint": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "esbuild": "0.8.52",
+    "eslint": "^7.20.0",
     "eslint-import-resolver-node": "^0.3.4",
-    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
     "jest-junit": "^12",
-    "jsii": "^1.17.1",
-    "jsii-diff": "^1.17.1",
-    "jsii-docgen": "^1.8.23",
-    "jsii-pacmak": "^1.17.1",
-    "jsii-release": "^0.2.10",
+    "jsii": "^1.22.0",
+    "jsii-diff": "^1.22.0",
+    "jsii-docgen": "^1.8.56",
+    "jsii-pacmak": "^1.22.0",
     "json-schema": "^0.3.0",
-    "projen": "^0.14.9",
-    "standard-version": "^9.0.0",
-    "ts-jest": "^26.4.4",
+    "projen": "^0.16.19",
+    "standard-version": "^9",
+    "ts-jest": "^26.5.2",
     "typescript": "4.1.3"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "^1.85.0",
-    "@aws-cdk/aws-lambda": "^1.85.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.85.0",
-    "@aws-cdk/aws-sns": "^1.85.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.85.0",
-    "@aws-cdk/core": "^1.85.0",
+    "@aws-cdk/aws-iam": "^1.91.0",
+    "@aws-cdk/aws-lambda": "^1.91.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.91.0",
+    "@aws-cdk/aws-sns": "^1.91.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.91.0",
+    "@aws-cdk/core": "^1.91.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "^1.85.0",
-    "@aws-cdk/aws-lambda": "^1.85.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.85.0",
-    "@aws-cdk/aws-sns": "^1.85.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.85.0",
-    "@aws-cdk/core": "^1.85.0",
-    "@aws-sdk/client-ecr": "^3.3.0",
-    "@aws-sdk/client-ses": "^3.3.0",
+    "@aws-cdk/aws-iam": "^1.91.0",
+    "@aws-cdk/aws-lambda": "^1.91.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.91.0",
+    "@aws-cdk/aws-sns": "^1.91.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.91.0",
+    "@aws-cdk/core": "^1.91.0",
     "aws-lambda": "^1.0.6",
+    "aws-sdk": "^2.828.0",
     "node-fetch": "^2.6.1"
   },
   "bundledDependencies": [
-    "@aws-sdk/client-ecr",
-    "@aws-sdk/client-ses",
     "aws-lambda",
+    "aws-sdk",
     "node-fetch"
   ],
   "keywords": [
