--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "url": "https://github.com/markusl/cdk-ecr-image-scan-handler.git"
   },
   "scripts": {
-    "projen": "npx projen",
-    "start": "npx projen start",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "test:compile": "npx projen test:compile",
@@ -22,7 +20,9 @@
     "package": "npx projen package",
     "eslint": "npx projen eslint",
     "compat": "npx projen compat",
-    "docgen": "npx projen docgen"
+    "docgen": "npx projen docgen",
+    "projen": "npx projen",
+    "start": "npx projen start"
   },
   "author": {
     "name": "Markus Lindqvist",
@@ -35,8 +35,8 @@
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
     "@types/node-fetch": "^2.5.7",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "esbuild": "0.8.52",
     "eslint": "^7.20.0",
     "eslint-import-resolver-node": "^0.3.4",
@@ -49,7 +49,7 @@
     "jsii-docgen": "^1.8.56",
     "jsii-pacmak": "^1.22.0",
     "json-schema": "^0.3.0",
-    "projen": "^0.16.19",
+    "projen": "^0.17.17",
     "standard-version": "^9",
     "ts-jest": "^26.5.2",
     "typescript": "4.1.3"
