feat: Update CDK to 1.104.0

--- a/.npmignore
+++ b/.npmignore
@@ -6,7 +6,6 @@
 /.mergify.yml
 /.projen
 /.projenrc.js
-/.versionrc.json
 /.vscode
 /coverage
 /src
@@ -21,6 +20,7 @@ coverage
 dist
 doc
 junit.xml
+tsconfig.tsbuildinfo
 !.jsii
 !/lib
 !/lib/**/*.d.ts
