--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
   },
   "scripts": {
     "clobber": "npx projen clobber",
+    "bump": "npx projen bump",
+    "unbump": "npx projen unbump",
     "compile": "npx projen compile",
     "test:compile": "npx projen test:compile",
     "test": "npx projen test",
     "build": "npx projen build",
-    "bump": "npx projen bump",
-    "release": "npx projen release",
     "test:watch": "npx projen test:watch",
     "test:update": "npx projen test:update",
-    "projen:upgrade": "npx projen projen:upgrade",
+    "upgrade-dependencies": "npx projen upgrade-dependencies",
+    "upgrade-projen": "npx projen upgrade-projen",
+    "default": "npx projen default",
     "watch": "npx projen watch",
     "package": "npx projen package",
     "eslint": "npx projen eslint",
@@ -30,14 +32,14 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.96.0",
-    "@types/aws-lambda": "^8.10.68",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.14.37",
-    "@types/node-fetch": "^2.5.7",
+    "@aws-cdk/assert": "^1.104.0",
+    "@types/aws-lambda": "^8.10.76",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.0",
+    "@types/node-fetch": "^2.5.10",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
-    "esbuild": "0.11.5",
+    "esbuild": "0.12.0",
     "eslint": "^7.20.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -49,27 +51,28 @@
     "jsii-docgen": "^1.8.56",
     "jsii-pacmak": "^1.22.0",
     "json-schema": "^0.3.0",
-    "projen": "^0.17.20",
+    "npm-check-updates": "^11",
+    "projen": "^0.17.93",
     "standard-version": "^9",
     "ts-jest": "^26.5.2",
-    "typescript": "4.1.3"
+    "typescript": "4.2.4"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "^1.96.0",
-    "@aws-cdk/aws-lambda": "^1.96.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.96.0",
-    "@aws-cdk/aws-sns": "^1.96.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.96.0",
-    "@aws-cdk/core": "^1.96.0",
+    "@aws-cdk/aws-iam": "^1.104.0",
+    "@aws-cdk/aws-lambda": "^1.104.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.104.0",
+    "@aws-cdk/aws-sns": "^1.104.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.104.0",
+    "@aws-cdk/core": "^1.104.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "^1.96.0",
-    "@aws-cdk/aws-lambda": "^1.96.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.96.0",
-    "@aws-cdk/aws-sns": "^1.96.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.96.0",
-    "@aws-cdk/core": "^1.96.0",
+    "@aws-cdk/aws-iam": "^1.104.0",
+    "@aws-cdk/aws-lambda": "^1.104.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.104.0",
+    "@aws-cdk/aws-sns": "^1.104.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.104.0",
+    "@aws-cdk/core": "^1.104.0",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.828.0",
     "node-fetch": "^2.6.1"
@@ -86,7 +89,7 @@
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
-  "version": "0.1.52",
+  "version": "0.0.0",
   "jest": {
     "testMatch": [
       "**/__tests__/**/*.ts?(x)",
