--- a/package.json
+++ b/package.json
@@ -35,47 +35,47 @@
     "@aws-cdk/assert": "^1.104.0",
     "@types/aws-lambda": "^8.10.76",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.3.0",
     "@types/node-fetch": "^2.5.10",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
+    "@types/node": "^15.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "esbuild": "0.12.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.31.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "jest": "^26.6.3",
     "jest-junit": "^12",
-    "jsii": "^1.22.0",
-    "jsii-diff": "^1.22.0",
-    "jsii-docgen": "^1.8.56",
-    "jsii-pacmak": "^1.22.0",
+    "jsii": "^1.31.0",
+    "jsii-diff": "^1.31.0",
+    "jsii-docgen": "^1.8.110",
+    "jsii-pacmak": "^1.31.0",
     "json-schema": "^0.3.0",
     "npm-check-updates": "^11",
     "projen": "^0.17.93",
     "standard-version": "^9",
-    "ts-jest": "^26.5.2",
+    "ts-jest": "^26.5.6",
     "typescript": "4.2.4"
   },
   "peerDependencies": {
     "@aws-cdk/aws-iam": "^1.104.0",
-    "@aws-cdk/aws-lambda": "^1.104.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.104.0",
-    "@aws-cdk/aws-sns": "^1.104.0",
+    "@aws-cdk/aws-lambda": "^1.104.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.104.0",
+    "@aws-cdk/aws-sns": "^1.104.0",
     "@aws-cdk/core": "^1.104.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "^1.104.0",
-    "@aws-cdk/aws-lambda": "^1.104.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.104.0",
-    "@aws-cdk/aws-sns": "^1.104.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.104.0",
-    "@aws-cdk/core": "^1.104.0",
     "aws-lambda": "^1.0.6",
-    "aws-sdk": "^2.828.0",
-    "node-fetch": "^2.6.1"
+    "aws-sdk": "^2.948.0",
+    "node-fetch": "^2.6.1",
+    "@aws-cdk/aws-iam": "^1.104.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.104.0",
+    "@aws-cdk/aws-lambda": "^1.104.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.104.0",
+    "@aws-cdk/aws-sns": "^1.104.0",
+    "@aws-cdk/core": "^1.104.0"
   },
   "bundledDependencies": [
     "aws-lambda",
