--- a/package.json
+++ b/package.json
@@ -7,24 +7,26 @@
   },
   "scripts": {
     "clobber": "npx projen clobber",
-    "bump": "npx projen bump",
-    "unbump": "npx projen unbump",
     "compile": "npx projen compile",
     "test:compile": "npx projen test:compile",
     "test": "npx projen test",
     "build": "npx projen build",
     "test:watch": "npx projen test:watch",
     "test:update": "npx projen test:update",
-    "upgrade-dependencies": "npx projen upgrade-dependencies",
+    "bump": "npx projen bump",
+    "unbump": "npx projen unbump",
+    "publish:github": "npx projen publish:github",
+    "upgrade": "npx projen upgrade",
     "upgrade-projen": "npx projen upgrade-projen",
     "default": "npx projen default",
     "watch": "npx projen watch",
     "package": "npx projen package",
     "eslint": "npx projen eslint",
     "compat": "npx projen compat",
+    "publish:npm": "npx projen publish:npm",
     "docgen": "npx projen docgen",
-    "projen": "npx projen",
-    "start": "npx projen start"
+    "release": "npx projen release",
+    "projen": "npx projen"
   },
   "author": {
     "name": "Markus Lindqvist",
@@ -32,10 +34,10 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.104.0",
+    "@aws-cdk/assert": "^1.118.0",
     "@types/aws-lambda": "^8.10.76",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.3.0",
+    "@types/node": "^10.17.0",
     "@types/node-fetch": "^2.5.10",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
@@ -44,7 +46,7 @@
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
     "jest-junit": "^12",
     "jsii": "^1.22.0",
     "jsii-diff": "^1.22.0",
@@ -52,27 +54,27 @@
     "jsii-pacmak": "^1.22.0",
     "json-schema": "^0.3.0",
     "npm-check-updates": "^11",
-    "projen": "^0.17.93",
+    "projen": "^0.27.27",
     "standard-version": "^9",
-    "ts-jest": "^26.5.2",
+    "ts-jest": "^27.0.4",
     "typescript": "4.2.4"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "^1.104.0",
-    "@aws-cdk/aws-lambda": "^1.104.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.104.0",
-    "@aws-cdk/aws-sns": "^1.104.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.104.0",
-    "@aws-cdk/core": "^1.104.0",
+    "@aws-cdk/aws-iam": "^1.118.0",
+    "@aws-cdk/aws-lambda": "^1.118.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.118.0",
+    "@aws-cdk/aws-sns": "^1.118.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.118.0",
+    "@aws-cdk/core": "^1.118.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "^1.104.0",
-    "@aws-cdk/aws-lambda": "^1.104.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.104.0",
-    "@aws-cdk/aws-sns": "^1.104.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.104.0",
-    "@aws-cdk/core": "^1.104.0",
+    "@aws-cdk/aws-iam": "^1.118.0",
+    "@aws-cdk/aws-lambda": "^1.118.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.118.0",
+    "@aws-cdk/aws-sns": "^1.118.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.118.0",
+    "@aws-cdk/core": "^1.118.0",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.828.0",
     "node-fetch": "^2.6.1"
