--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -162,7 +162,7 @@
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade @aws-cdk/assert @types/aws-lambda @types/jest @types/node-fetch @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser esbuild eslint eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import jest jest-junit jsii jsii-diff jsii-docgen jsii-pacmak json-schema npm-check-updates standard-version ts-jest typescript aws-lambda aws-sdk node-fetch @aws-cdk/aws-iam @aws-cdk/aws-lambda-nodejs @aws-cdk/aws-lambda @aws-cdk/aws-sns-subscriptions @aws-cdk/aws-sns @aws-cdk/core constructs @aws-cdk/aws-iam @aws-cdk/aws-lambda-nodejs @aws-cdk/aws-lambda @aws-cdk/aws-sns-subscriptions @aws-cdk/aws-sns @aws-cdk/core aws-lambda node-fetch"
+          "exec": "yarn upgrade @aws-cdk/assert @types/aws-lambda @types/jest @types/node-fetch @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser esbuild eslint eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import jest jest-junit jsii jsii-diff jsii-docgen jsii-pacmak json-schema npm-check-updates standard-version ts-jest typescript @aws-sdk/client-ecr @aws-sdk/client-ses aws-lambda node-fetch @aws-cdk/aws-iam @aws-cdk/aws-lambda-nodejs @aws-cdk/aws-lambda @aws-cdk/aws-sns-subscriptions @aws-cdk/aws-sns @aws-cdk/core constructs @aws-cdk/aws-iam @aws-cdk/aws-lambda-nodejs @aws-cdk/aws-lambda @aws-cdk/aws-sns-subscriptions @aws-cdk/aws-sns @aws-cdk/core aws-lambda node-fetch"
         },
         {
           "exec": "npx projen"
